syntax = "proto3";

package core.v1;

option go_package = "erp.localhost/internal/infra/proto/core/v1;corev1";

 import "infra/v1/infra.proto";

message UserResponse {

}

message UsersResponse {
    repeated UserResponse users = 1;
}

message CreateUserRequest {
    infra.v1.UserIdentifier identifier = 1;

}

message GetUserRequest {
    infra.v1.UserIdentifier identifier = 1;
}

message GetUsersRequest {
    infra.v1.UserIdentifier identifier = 1;
}

message UpdateUserRequest {
    infra.v1.UserIdentifier identifier = 1;
}

message UpdateUserResponse {
    infra.v1.UserIdentifier identifier = 1;
}

message DeleteUserRequest {
    infra.v1.UserIdentifier identifier = 1;
}

message DeleteUserResponse {
    bool deleted = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc GetUsers(GetUsersRequest) returns (UsersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
